# OpenCOLLADA

./: CMakeLists.txt  build_maya_plugin.bat  generate_vs2022.bat
COLLADAMaya/: CMakeLists.txt
COLLADAMaya/include/: COLLADAMayaHwShaderExporter.h  COLLADAMayaMaterialExporter.h
COLLADAMaya/src/: COLLADAMayaFileTranslator.cpp  COLLADAMayaHwShaderExporter.cpp  COLLADAMayaMaterialExporter.cpp
COLLADAStreamWriter/: CMakeLists.txt
GeneratedSaxParser/include/: GeneratedSaxParserParserTemplate.h  GeneratedSaxParserParserTemplateBase.h  GeneratedSaxParserUtils.h
GeneratedSaxParser/src/: GeneratedSaxParserUtils.cpp
cmake/: FindMaya.cmake
dae2ma/: CMakeLists.txt
dae2ma/include/: DAE2MAStableHeaders.h
